System List now populates

--- a/src/main/resources/SystemItemCell.fxml
+++ b/src/main/resources/SystemItemCell.fxml
@@ -5,11 +5,10 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-
 <HBox stylesheets="@/styles/systemItemCell.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="manager.controllers.SystemListItemController">
     <ImageView fx:id="imageView" fitHeight="50" fitWidth="50" />
     <VBox>
         <Label styleClass="title" fx:id="titleLabel" />
-        <Label styleClass="subtitle" fx:id="subtitle" text="27 Titles" />
+        <Label styleClass="subtitle" fx:id="subTitle" />
     </VBox>
 </HBox>
