--- a/src/main/resources/MainWindow.fxml
+++ b/src/main/resources/MainWindow.fxml
@@ -66,7 +66,7 @@
                   <menus>
                     <Menu fx:id="topMenu" mnemonicParsing="false" text="Menu">
                       <items>
-                              <MenuItem fx:id="optionsMenuItem" mnemonicParsing="false" text="Options" />
+                              <MenuItem fx:id="optionsMenuItem" onAction="#handleOptionsMenuItem" mnemonicParsing="false" text="Options" />
                         <MenuItem mnemonicParsing="false" text="About" />
                               <SeparatorMenuItem mnemonicParsing="false" />
                               <MenuItem fx:id="closeMenuItem" onAction="#handleCloseMenuItem" mnemonicParsing="false" text="Close" />
