--- a/src/main/resources/OptionsWindow.fxml
+++ b/src/main/resources/OptionsWindow.fxml
@@ -8,20 +8,20 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane maxHeight="320.0" maxWidth="560.0" minHeight="320.0" minWidth="560.0" prefHeight="320.0" prefWidth="560.0" styleClass="root" stylesheets="@styles/optionsWindow.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane fx:controller="manager.controllers.OptionsWindowController" maxHeight="320.0" maxWidth="560.0" minHeight="320.0" minWidth="560.0" prefHeight="320.0" prefWidth="560.0" styleClass="root" stylesheets="@styles/optionsWindow.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <TabPane prefHeight="320.0" prefWidth="560.0" tabClosingPolicy="UNAVAILABLE">
+      <TabPane fx:id="tabPane" prefHeight="320.0" prefWidth="560.0" tabClosingPolicy="UNAVAILABLE">
          <tabs>
             <Tab text="General">
                <content>
                   <AnchorPane>
                      <children>
-                        <ComboBox layoutX="201.0" layoutY="45.0" prefWidth="150.0" />
+                        <ComboBox fx:id="deviceProfileComboBox" layoutX="201.0" layoutY="45.0" prefWidth="150.0" />
                         <Label layoutX="14.0" layoutY="44.0" text="Device Profile" />
                         <Label layoutX="14.0" layoutY="78.0" />
-                        <TextField layoutX="201.0" layoutY="79.0" prefHeight="23.0" prefWidth="151.0" />
+                        <TextField fx:id="manualScaleSizeTextField" layoutX="201.0" layoutY="79.0" prefHeight="23.0" prefWidth="151.0" />
                         <Label layoutX="14.0" layoutY="78.0" text="Manual Scale Size" />
-                        <CheckBox contentDisplay="RIGHT" layoutX="288.0" layoutY="109.0" mnemonicParsing="false" styleClass="apiCheckbox" text="Enable" />
+                        <CheckBox fx:id="manualScaleEnableCheckBox" contentDisplay="RIGHT" layoutX="288.0" layoutY="109.0" mnemonicParsing="false" styleClass="apiCheckbox" text="Enable" />
                      </children></AnchorPane>
                </content>
             </Tab>
@@ -29,13 +29,13 @@
                <content>
                   <AnchorPane>
                      <children>
-                        <TextField layoutX="14.0" layoutY="47.0" prefHeight="23.0" prefWidth="342.0" promptText="API Key" />
+                        <TextField fx:id="steamGridDBApiKeyTextField" layoutX="14.0" layoutY="47.0" prefHeight="23.0" prefWidth="342.0" promptText="API Key" />
                         <Label layoutX="14.0" layoutY="22.0" text="SteamGridDB" />
-                        <TextField layoutX="14.0" layoutY="155.0" prefHeight="23.0" prefWidth="342.0" promptText="Secret" />
+                        <TextField fx:id="igdbSecretTextField" layoutX="14.0" layoutY="155.0" prefHeight="23.0" prefWidth="342.0" promptText="Secret" />
                         <Label layoutX="14.0" layoutY="99.0" text="IGDB" />
-                        <TextField layoutX="14.0" layoutY="124.0" prefHeight="23.0" prefWidth="342.0" promptText="Client ID" />
-                        <CheckBox contentDisplay="RIGHT" layoutX="286.0" layoutY="76.0" mnemonicParsing="false" styleClass="apiCheckbox" text="Enabled" />
-                        <CheckBox contentDisplay="RIGHT" layoutX="286.0" layoutY="188.0" mnemonicParsing="false" styleClass="apiCheckbox" text="Enabled" />
+                        <TextField fx:id="igdbClientIdTextField" layoutX="14.0" layoutY="124.0" prefHeight="23.0" prefWidth="342.0" promptText="Client ID" />
+                        <CheckBox fx:id="steamGridDBEnabledCheckBox" contentDisplay="RIGHT" layoutX="286.0" layoutY="76.0" mnemonicParsing="false" styleClass="apiCheckbox" text="Enabled" />
+                        <CheckBox fx:id="igdbEnabledCheckBox" contentDisplay="RIGHT" layoutX="286.0" layoutY="188.0" mnemonicParsing="false" styleClass="apiCheckbox" text="Enabled" />
                      </children></AnchorPane>
                </content>
             </Tab>
