--- a/src/main/resources/SystemItemCell.fxml
+++ b/src/main/resources/SystemItemCell.fxml
@@ -1,14 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 
 <HBox stylesheets="@/styles/systemItemCell.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="manager.controllers.SystemListItemController">
-    <ImageView fx:id="imageView" fitHeight="50" fitWidth="50" />
+    <StackPane maxHeight="60.0" maxWidth="50.0" minHeight="50.0" minWidth="60.0" styleClass="imageContainer">
+        <ImageView id="imageView" fx:id="imageView" fitHeight="50" fitWidth="50" preserveRatio="true" HBox.hgrow="NEVER" />
+      <HBox.margin>
+         <Insets />
+      </HBox.margin>
+      <padding>
+         <Insets right="10.0" />
+      </padding>
+    </StackPane>
     <VBox>
-        <Label styleClass="title" fx:id="titleLabel" />
-        <Label styleClass="subtitle" fx:id="subTitle" />
+        <Label fx:id="titleLabel" styleClass="title" />
+        <Label fx:id="subTitle" styleClass="subtitle" />
     </VBox>
 </HBox>
