--- a/src/main/resources/ImageCropperPanel.fxml
+++ b/src/main/resources/ImageCropperPanel.fxml
@@ -1,30 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.Spinner?>
 <?import javafx.scene.control.ToolBar?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane fx:id="wizardPane" stylesheets="@styles/imageCropperPanel.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="manager.controllers.panels.ImageCropperPanelController">
-    <VBox fx:id="vbox" minHeight="${wizardPane.height}" minWidth="${wizardPane.width}" prefHeight="400" prefWidth="600" spacing="10.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-        <StackPane fx:id="imagePane" minHeight="${wizardPane.height - 60}" minWidth="${wizardPane.width}" VBox.vgrow="ALWAYS">
+<AnchorPane fx:id="wizardPane" styleClass="wizardPane" stylesheets="@styles/imageCropperPanel.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="manager.controllers.panels.ImageCropperPanelController">
+    <VBox fx:id="vbox" minHeight="${wizardPane.height}" minWidth="${wizardPane.width}" prefHeight="400" prefWidth="600" spacing="10.0" styleClass="vbox" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+        <StackPane fx:id="imagePane" minHeight="${wizardPane.height - 60}" minWidth="${wizardPane.width}" styleClass="imagePane" VBox.vgrow="ALWAYS">
             <ImageView fx:id="imageView" minHeight="${imagePane.height}" minWidth="${imagePane.width}" preserveRatio="true" styleClass="imageView">
             </ImageView>
         </StackPane>
-        <ToolBar minWidth="${wizardPane.width}" prefHeight="32.0" prefWidth="400" VBox.vgrow="NEVER">
+        <ToolBar minWidth="${wizardPane.width}" prefHeight="32.0" prefWidth="400" styleClass="toolbar" translateX="-8.0" VBox.vgrow="NEVER">
             <items>
-                <HBox alignment="CENTER" minWidth="${wizardPane.width}" prefHeight="32.0" prefWidth="400">
-                    <children>
-                        <TextField prefHeight="25" prefWidth="59" promptText="X Cord" fx:id="xField" />
-                        <TextField fx:id="yField" prefHeight="25" prefWidth="59" promptText="Y Cord" />
-                        <TextField fx:id="widthField" prefHeight="25" prefWidth="59" promptText="Width" />
-                        <TextField fx:id="heightField" prefHeight="25" prefWidth="59.0" promptText="Height" />
-                        <Button mnemonicParsing="false" text="Crop" />
-                    </children>
+                <HBox alignment="CENTER" minWidth="${wizardPane.width}" prefHeight="32.0" styleClass="hbox">
+                    <Spinner fx:id="xCordSpinner" editable="true" prefHeight="32.0" prefWidth="80.0" />
+                    <Spinner fx:id="yCordSpinner" editable="true" prefHeight="32.0" prefWidth="80.0" />
+                    <Spinner fx:id="widthSpinner" editable="true" prefHeight="32.0" prefWidth="80.0" />
+                    <Spinner fx:id="heightSpinner" editable="true" prefHeight="32.0" prefWidth="80.0" />
+                    <Button>
                 </HBox>
             </items>
         </ToolBar>
