--- a/src/main/resources/fxml/actionWizard/RomActionWizard.fxml
+++ b/src/main/resources/fxml/actionWizard/RomActionWizard.fxml
@@ -8,11 +8,11 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 
-<AnchorPane fx:id="wizardPane" prefHeight="480.0" prefWidth="640.0" styleClass="defaultContainer" stylesheets="@styles/localImageWindow.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="manager.controllers.LocalImageWindow">
+<AnchorPane fx:id="wizardPane" prefHeight="480.0" prefWidth="640.0" styleClass="defaultContainer" stylesheets="@styles/romActionWizard.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="manager.controllers.actionWizard.RomActionWizard">
     <children>
         <!-- Select Operating Mode -->
         <AnchorPane fx:id="selectMode" styleClass="defaultContainer" visible="true">
-    <Label layoutX="23.0" layoutY="14.0" text="Select Mode" />
+        <Label layoutX="23.0" layoutY="14.0" text="Select Mode" />
             <Pane layoutX="23.0" layoutY="67.0" prefHeight="141.0" prefWidth="309.0" styleClass="borderBox">
                 <children>
                     <Label layoutX="14.0" layoutY="14.0" text="Cover Art Actions" />
