--- a/src/main/resources/fxml/actionWizard/SelectLocalImagePanel.fxml
+++ b/src/main/resources/fxml/actionWizard/SelectLocalImagePanel.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import org.kordamp.ikonli.javafx.FontIcon?>
 
-<AnchorPane fx:id="wizardPane" prefHeight="480.0" prefWidth="640.0" styleClass="defaultContainer" stylesheets="@../../styles/romActionWizard.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="manager.controllers.actionWizard.SelectLocalImagePanelController">
+<AnchorPane fx:id="wizardPane" prefHeight="480.0" prefWidth="640.0" styleClass="defaultContainer" stylesheets="@/styles/romActionWizard.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="manager.controllers.actionWizard.SelectLocalImagePanelController">
    <children>
       <Pane fx:id="fileSelectPane" layoutX="35.0" layoutY="356.0" prefHeight="60.0" prefWidth="571.0" styleClass="borderBox">
          <children>
@@ -19,7 +19,7 @@
          <children>
             <Label fx:id="dragBoxLabel" layoutX="194.0" layoutY="163.0" text="Drag and drop here" />
             <FontIcon fx:id="fontIcon" iconLiteral="far-file-image" layoutX="268.0" layoutY="143.0" styleClass="fontIcon" />
-            <ImageView fx:id="imagePreview" fitHeight="{$dragBox.height - 40}" fitWidth="{$dragBox.width - 40}" layoutX="20.0" layoutY="20.0" pickOnBounds="true" preserveRatio="true" />
+            <ImageView fx:id="imagePreview" layoutX="20.0" layoutY="20.0" pickOnBounds="true" preserveRatio="true" />
          </children>
       </Pane>
    </children>
