--- a/src/main/resources/fxml/actionWizard/RomActionWizard.fxml
+++ b/src/main/resources/fxml/actionWizard/RomActionWizard.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 
-<AnchorPane fx:id="wizardPane" prefHeight="480.0" prefWidth="640.0" styleClass="defaultContainer" stylesheets="@/styles/romActionWizard.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="manager.controllers.actionWizard.RomActionWizard">
+<AnchorPane fx:id="wizardPane" prefHeight="480.0" prefWidth="640.0" styleClass="defaultContainer" stylesheets="@/styles/style.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="manager.controllers.actionWizard.RomActionWizard">
     <children>
         <!-- Select Operating Mode -->
         <AnchorPane fx:id="selectMode" styleClass="defaultContainer" visible="true">
@@ -46,10 +46,12 @@
         </AnchorPane>
 
         <!-- Back Button -->
-        <Button fx:id="backButton" disable="true" layoutX="18.0" layoutY="262.0" onAction="#goBack" prefHeight="23.0" prefWidth="80.0" text="Back" AnchorPane.bottomAnchor="15.0" AnchorPane.leftAnchor="18.0" />
+        <Button fx:id="backButton" disable="true" layoutX="18.0" layoutY="262.0" onAction="#goBack" prefHeight="23.0" prefWidth="80.0" text="Back" AnchorPane.bottomAnchor="6.0" AnchorPane.leftAnchor="18.0" />
 
         <!-- Next Button -->
-        <Button fx:id="nextButton" layoutX="345.0" layoutY="262.0" onAction="#goNext" prefHeight="23.0" prefWidth="80.0" text="Next" AnchorPane.bottomAnchor="15.0" AnchorPane.rightAnchor="14.0" />
+        <Button fx:id="nextButton" layoutX="345.0" layoutY="262.0" onAction="#goNext" prefHeight="23.0" prefWidth="80.0" text="Next" AnchorPane.bottomAnchor="6.0" AnchorPane.rightAnchor="14.0" />
+
+        <Button fx:id="saveButton" layoutX="345.0" layoutY="262.0" onAction="#saveImage" prefHeight="23.0" prefWidth="80.0" text="Next" AnchorPane.bottomAnchor="6.0" AnchorPane.rightAnchor="14.0" />
                
             
     </children>
