Rom wizard has rounded window and window buttons

--- a/src/main/resources/styles/style.css
+++ b/src/main/resources/styles/style.css
@@ -32,6 +32,10 @@ src: url('../fonts/Roboto-Bold.ttf');
 -fx-base: #182a46;
 }
 
+#WindowActionButtons{
+    -fx-background-color: #0b192f;
+}
+
 .hbox {
 -fx-spacing: 10px;
 }
