--- a/src/main/resources/fxml/actionWizard/RomActionWizard.fxml
+++ b/src/main/resources/fxml/actionWizard/RomActionWizard.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.ToggleGroup?>
@@ -8,8 +9,11 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 
-<AnchorPane fx:id="wizardPane" prefHeight="480.0" prefWidth="640.0" styleClass="defaultContainer" stylesheets="@/styles/style.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="manager.controllers.actionWizard.RomActionWizard">
+<?import org.kordamp.ikonli.javafx.FontIcon?>
+
+<AnchorPane fx:id="wizardPane" prefHeight="480.0" prefWidth="700.0" styleClass="defaultContainer" stylesheets="@/styles/style.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="manager.controllers.actionWizard.RomActionWizard">
     <children>
+        
         <!-- Select Operating Mode -->
         <AnchorPane fx:id="selectMode" styleClass="defaultContainer" visible="true">
         <Label layoutX="23.0" layoutY="14.0" text="Select Mode" />
@@ -45,14 +49,30 @@
             <ImageView fx:id="croppedImage" layoutY="100" minHeight="${wizardPane.height}" minWidth="${wizardPane.width}" preserveRatio="true" styleClass="imageView" />
         </AnchorPane>
 
+        <AnchorPane fx:id="WindowActionButtons" id="WindowActionButtons" layoutX="0" layoutY="0" minHeight="32.0" minWidth="0.0" prefHeight="32.0" prefWidth="${wizardPane.width}">
+            <children>
+            <Button styleClass="minimize-button" fx:id="minimizeButton" onAction="#handleMinimizeButton" AnchorPane.rightAnchor="44.0" layoutX="738.0" layoutY="11.0" maxHeight="20.0" maxWidth="20.0" minHeight="20.0" minWidth="20.0" mnemonicParsing="false" prefHeight="20.0" prefWidth="20.0">
+                <graphic>
+                <FontIcon  iconLiteral="fas-window-minimize" iconSize="10" iconColor="#dee6f1c7"/>
+                </graphic>
+            </Button>
+            <Button styleClass="close-button" fx:id="closeButton" onAction="#handleCloseButton" AnchorPane.rightAnchor="14.0" layoutX="768.0" layoutY="11.0" maxHeight="20.0" maxWidth="20.0" minHeight="20.0" minWidth="20.0" mnemonicParsing="false" prefHeight="20.0" prefWidth="20.0">
+                <graphic>
+                <FontIcon iconLiteral="fas-window-close" iconSize="10" iconColor="#dee6f1c7"/>
+                </graphic>
+            </Button>
+            </children>
+        </AnchorPane> 
+
         <!-- Back Button -->
         <Button fx:id="backButton" disable="true" layoutX="18.0" layoutY="262.0" onAction="#goBack" prefHeight="23.0" prefWidth="80.0" text="Back" AnchorPane.bottomAnchor="6.0" AnchorPane.leftAnchor="18.0" />
 
         <!-- Next Button -->
         <Button fx:id="nextButton" layoutX="345.0" layoutY="262.0" onAction="#goNext" prefHeight="23.0" prefWidth="80.0" text="Next" AnchorPane.bottomAnchor="6.0" AnchorPane.rightAnchor="14.0" />
 
-        <Button fx:id="saveButton" layoutX="345.0" layoutY="262.0" onAction="#saveImage" prefHeight="23.0" prefWidth="80.0" text="Next" AnchorPane.bottomAnchor="6.0" AnchorPane.rightAnchor="14.0" />
+        <!-- Save Button -->
+        <Button fx:id="saveButton" layoutX="345.0" layoutY="262.0" onAction="#saveImage" prefHeight="23.0" prefWidth="80.0" text="Save" AnchorPane.bottomAnchor="6.0" AnchorPane.rightAnchor="14.0" />
                
-            
+           
     </children>
 </AnchorPane>
