--- a/src/main/resources/fxml/actionWizard/RomActionWizard.fxml
+++ b/src/main/resources/fxml/actionWizard/RomActionWizard.fxml
@@ -65,13 +65,13 @@
         </AnchorPane> 
 
         <!-- Back Button -->
-        <Button fx:id="backButton" disable="true" layoutX="18.0" layoutY="262.0" onAction="#goBack" prefHeight="23.0" prefWidth="80.0" text="Back" AnchorPane.bottomAnchor="6.0" AnchorPane.leftAnchor="18.0" />
+        <Button fx:id="backButton" onAction="#goBack" prefHeight="23.0" prefWidth="80.0" text="Back" AnchorPane.bottomAnchor="6.0" AnchorPane.leftAnchor="18.0" />
 
         <!-- Next Button -->
-        <Button fx:id="nextButton" layoutX="345.0" layoutY="262.0" onAction="#goNext" prefHeight="23.0" prefWidth="80.0" text="Next" AnchorPane.bottomAnchor="6.0" AnchorPane.rightAnchor="14.0" />
+        <Button fx:id="nextButton" layoutY="262.0" onAction="#goNext" prefHeight="23.0" prefWidth="80.0" text="Next" AnchorPane.bottomAnchor="6.0" AnchorPane.rightAnchor="14.0" />
 
         <!-- Save Button -->
-        <Button fx:id="saveButton" layoutX="345.0" layoutY="262.0" onAction="#saveImage" prefHeight="23.0" prefWidth="80.0" text="Save" AnchorPane.bottomAnchor="6.0" AnchorPane.rightAnchor="14.0" />
+        <Button fx:id="saveButton" layoutY="262.0" onAction="#saveImage" prefHeight="23.0" prefWidth="80.0" text="Save" AnchorPane.bottomAnchor="6.0" AnchorPane.rightAnchor="14.0" />
                
            
     </children>
