Fixed alignment on final image preview

--- a/src/main/resources/fxml/actionWizard/FinalImagePreviewPanel.fxml
+++ b/src/main/resources/fxml/actionWizard/FinalImagePreviewPanel.fxml
@@ -4,12 +4,13 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.StackPane?>
 
-
-<AnchorPane fx:id="rootPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="640.0" stylesheets="@/styles/style.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="manager.controllers.actionWizard.FinalImagePreviewPanel">
+<AnchorPane fx:id="rootPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" stylesheets="@/styles/style.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="manager.controllers.actionWizard.FinalImagePreviewPanel">
    <children>
-      <ImageView fx:id="imageView" fitHeight="380.0" fitWidth="600.0" layoutX="14.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="80.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="20.0" />
+      <StackPane fx:id="stackPane" AnchorPane.bottomAnchor="80.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="36.0">
+         <ImageView fx:id="imageView" fitHeight="${stackPane.height}" fitWidth="${stackPane.width}" pickOnBounds="true" preserveRatio="true" StackPane.alignment="CENTER"/>
+      </StackPane>
       <Label fx:id="titleLabel" layoutX="286.0" layoutY="449.0" text="Final Preview" AnchorPane.bottomAnchor="14.0" />
    </children>
 </AnchorPane>
-
