--- a/src/main/resources/fxml/elements/RomItemCell.fxml
+++ b/src/main/resources/fxml/elements/RomItemCell.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<HBox stylesheets="@/styles/romCellItem.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="manager.controllers.RomListItemController" alignment="CENTER_RIGHT">
+<HBox stylesheets="@/styles/romCellItem.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="manager.controllers.elements.RomListItemController" alignment="CENTER_RIGHT">
     <VBox HBox.hgrow="ALWAYS">
         <Label styleClass="title" fx:id="titleLabel" />
         <Label styleClass="subtitle" fx:id="subTitle" />
